<resources>
    <string name="app_name">Watcha</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="home">Home</string>
    <string name="movie_details">Details</string>
    <string name="movie_title">Title</string>
    <string name="movie_description">Description</string>
    <string name="list_favorites">Favorites</string>
    <string name="movie_mark_favorite">Add favorite</string>
    <string name="movie_uncheck_favorite">Remove favorite</string>
    <string name="search">Search</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="subscription_free">Free</string>
    <string name="subscription_basic">Basic</string>
    <string name="subscription_standard">Standard</string>
    <string name="subscription_premium">Premium</string>
    <string name="navigation_back">Back</string>
    <string name="movie_score_empty">N/A</string>
    <string name="genre_not_specified">Not specified</string>
    <string name="search_label">Search movie</string>
    <string name="search_placeholder">What movie are we watching?</string>
    <string name="user_profile">User profile</string>
    <string name="favorite_add_success">Added to favorites</string>
    <string name="favorite_remove_success">Removed from favorites</string>
    <string name="toast_close">Dimsmiss</string>
    <string name="empty_text" translatable="false" />
    <string name="home_now_playing">Now Playing</string>
    <string name="home_popular">Popular</string>
    <string name="home_top_rated">Top Rated</string>
    <string name="home_upcoming">Upcoming</string>
    <string name="favorite_error">An error occurred. Please, try again later.</string>
    <string name="search_clean_log">Clean search log</string>
    <string name="movie_list_error">An error has occurred</string>
    <string name="retry">Retry</string>
    <string name="movie_list_loading">Loading data</string>
    <string name="movie_list_connection_lost">It seems that connection has been lost…</string>
    <string name="favorite_list_empty">Why so empty? Go add some movie bangers!</string>
    <string name="search_no_result">We couldn\'t find anything</string>
    <string name="settings">Settings</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_english">English</string>
    <string name="tmdb_logo">The Movie Database</string>
    <string name="tmdb_credits">Credits to The Movie Database for giving access to its API</string>
    <string name="github">GitHub</string>
    <string name="linkedin">LinkedIn</string>
    <string name="gmail">Gmail</string>
    <string name="reach_me">You can reach me through the following ways</string>
    <string name="language">Language</string>
    <string name="api_settings">API Settings</string>
    <string name="tmdb_url">https://www.themoviedb.org/</string>
    <string name="github_url">https://github.com/hbjosemaria</string>
    <string name="linkedin_url">https://linkedin.com/in/josemariahb</string>
    <string name="mail_to_gmail">mailto:hbjosemaria@gmail.com</string>
    <string name="main">Main</string>
    <string name="settings_language">Language</string>
    <string name="app_language">App language</string>
    <string name="settings_language_explanation">By changing this setting, both App and TMDB Api calls will be shown in the selected language.</string>
    <string name="sign_in_screen">Sign in</string>
    <string name="sign_in_header">Heading inside to watch some movies?</string>
    <string name="sign_in_subheader">Sign in first to access</string>
    <string name="sign_in">Sign in with credentials</string>
    <string name="sign_up">Sign up with password</string>
    <string name="log_out">Log out</string>
    <string name="sign_in_no_credentials_error">To access, you must sign up first</string>
    <string name="sign_in_error">An error occurred while trying to sing in</string>
    <string name="app_logo">App logo</string>
    <string name="sign_up_screen">Sign up</string>
    <string name="sign_up_account">Sign up account</string>
    <string name="sign_up_email_placeholder">example@gmail.com</string>
    <string name="sign_up_password_label">Password</string>
    <string name="sign_up_email_label" translatable="false">Email</string>
    <string name="sign_up_password_placeholder">MyPassword#123</string>
    <string name="sign_up_no_user_found_error">Your account could not be created</string>
    <string name="sign_up_credential_error">An error occurred during the creation process. Try again later</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="auth_screen">TMDB Sync Authorization</string>
    <string name="auth_session_not_created">We could not vinculate your TMDB user. If this persists, please contact us</string>
    <string name="auth_session_being_created">"Linking your account "</string>
    <string name="auth_session_created">Account linked successfully</string>
    <string name="auth_request_token_failed">An error occurred while trying to ask for authorization. Please, try again later</string>
    <string name="auth_explanation">In order to sync Watcha with TMDB, we will ask for your authorization to link your account to Watcha.</string>
    <string name="auth_explanation_button">Proceed to authorization</string>
    <string name="watcha_and_tmdb_sync" translatable="false">Sync image</string>
    <string name="reviews">Reviews</string>
    <string name="backdrop" translatable="false">Backdrop</string>
    <string name="poster" translatable="false">Poster</string>
    <string name="overview">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="cast_member">Cast member</string>
    <string name="similar">Similar to %s</string>
    <string name="recommendations">Recommendations</string>
    <string name="review_written_by">A review by %s</string>
    <string name="review_author_sub">Written by %s on %s</string>
    <string name="images">Images</string>
    <string name="videos" translatable="false">Videos</string>
    <string name="media" translatable="false">Media</string>
    <string name="youtube" translatable="false">Youtube</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="share_movie">Share movie using</string>
    <string name="not_rated">NR</string>
    <string name="delete_account">Delete account</string>
</resources>